@@ -51,6 +51,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* fix bug in python binding for file_progress on torrents with no metadata
 	* fix assert when removing a connected web seed
 	* fix bug in tracker timeout logic
 	* switch UPnP post back to HTTP 1.1
